[package]
name = "encstream"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"

[dependencies]
snow = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
either = "1.5.2"
romio = "0.3.0-alpha.8"

[dependencies.futures]
version = "0.3.0-alpha.16"
package = "futures-preview"
features = ["async-await", "nightly"]

[dev-dependencies]
structopt = "0.2.15"
serde_json = { version = "1" }
hex = "0.3.2"
